# binacpp

example/: binancecom.crt  example_aggTrades
src/: binacpp.cpp  binacpp.h  binacpp_utils.cpp  binacpp_websocket.cpp  libbinacpp.pc  meson.build
